# cargo-depgraph

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  todo.txt
.github/workflows/: ci.yml
src/: cli.rs  dep_info.rs  graph.rs  main.rs  output.rs  package.rs  util.rs
src/graph/: build.rs  builder.rs
