[package]
name = "cargo-depgraph"
version = "1.2.2"
authors = ["Jonas Platte <jplatte@posteo.de>"]
license = "GPL-3.0-or-later"
edition = "2018"
description = "Creates dependency graphs for cargo projects using `cargo metadata` and graphviz."
homepage = "https://sr.ht/~jplatte/cargo-depgraph/"
repository = "https://git.sr.ht/~jplatte/cargo-depgraph"
readme = "README.md"
categories = ["development-tools::cargo-plugins", "visualization"]
exclude = [".gitignore", ".rustfmt.toml", "*.png"]

[dependencies]
anyhow = "1.0.38"
cargo_metadata = "0.14.0"
clap = "2.33.3"
petgraph = { version = "0.6.0", default-features = false, features = ["stable_graph"] }
