[package]
name = "cargo-depgraph"
version = "1.6.0"
authors = ["Jonas Platte <jplatte@posteo.de>"]
license = "GPL-3.0-or-later"
edition = "2021"
description = "Creates dependency graphs for cargo projects using `cargo metadata` and graphviz."
homepage = "https://sr.ht/~jplatte/cargo-depgraph/"
repository = "https://git.sr.ht/~jplatte/cargo-depgraph"
readme = "README.md"
categories = ["development-tools::cargo-plugins", "visualization"]
exclude = [".gitignore", ".rustfmt.toml", "*.png"]

[dependencies]
anyhow = "1.0.38"
cargo_metadata = "0.18.0"
clap = "4.0.18"
petgraph = { version = "0.6.0", default-features = false, features = ["stable_graph"] }
